--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "license": "ISC",
   "author": "",
   "type": "commonjs",
-  "main": "js/db.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon js/db.js"
+    "start": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "nodemon": "^3.1.11",
-    "oracledb": "^6.10.0"
+    "oracledb": "^6.10.0",
+    "path": "^0.12.7"
   }
 }
